--- a/author-service/.env
+++ b/author-service/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://localhost:27017/author-service
+MONGO_URI=mongodb://mongodb-author:27017/author-service
 JWT_SECRET=monsercret
 JWT_EXPIRES=3d
