--- a/book-service/.env
+++ b/book-service/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://localhost:27017/book-service
+MONGO_URI=mongodb://mongodb-book:27017/book-service
 JWT_SECRET=monsercret
 JWT_EXPIRES=3d
