--- a/book-service/Dockerfile
+++ b/book-service/Dockerfile
@@ -1,3 +1,10 @@
 FROM node:20
-WORKDIR /usr/src/app
+RUN mkdir -p /usr/src/book-service
+WORKDIR /usr/src/book-service
+ADD . /usr/src/book-service
+COPY package*.json ./
+COPY dist/ ./dist/
+COPY tsconfig*.json ./
+COPY nest-cli.json ./ 
+COPY .env ./ 
 CMD npm install && npm run start 
