--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -3,7 +3,7 @@ RUN mkdir -p /usr/src/api-gateway
 WORKDIR /usr/src/api-gateway
 ADD . /usr/src/api-gateway
 COPY package*.json ./
-COPY dist ./dist/
+# COPY dist ./dist/
 COPY tsconfig*.json ./
 COPY nest-cli.json ./ 
 COPY .env ./ 
