--- a/author-service/Dockerfile
+++ b/author-service/Dockerfile
@@ -3,7 +3,7 @@ RUN mkdir -p /usr/src/author-service
 WORKDIR /usr/src/author-service
 ADD . /usr/src/author-service
 COPY package*.json ./
-COPY /dist ./dist/
+# COPY /dist ./dist/
 COPY tsconfig*.json ./
 COPY nest-cli.json ./ 
 COPY .env ./ 
