--- a/book-service/Dockerfile
+++ b/book-service/Dockerfile
@@ -3,7 +3,7 @@ RUN mkdir -p /usr/src/book-service
 WORKDIR /usr/src/book-service
 ADD . /usr/src/book-service
 COPY package*.json ./
-COPY dist/ ./dist/
+# COPY dist/ ./dist/
 COPY tsconfig*.json ./
 COPY nest-cli.json ./ 
 COPY .env ./ 
