--- a/api-gateway/.env
+++ b/api-gateway/.env
@@ -1,3 +1,5 @@
 MONGO_URI=mongodb://localhost:27017/gateway-service
 JWT_SECRET=monsercret
 JWT_EXPIRES=3d
+RABBITMQ_URI=amqp://rabbitmq:5672
+# RABBITMQ_URI=amqp://localhost:5672
