--- a/book-service/.env
+++ b/book-service/.env
@@ -1,3 +1,6 @@
 MONGO_URI=mongodb://mongodb-book:27017/book-service
+# MONGO_URI=mongodb://127.0.0.1:27017/book-service
 JWT_SECRET=monsercret
 JWT_EXPIRES=3d
+RABBITMQ_URI=amqp://rabbitmq:5672
+# RABBITMQ_URI=amqp://localhost:5672
