--- a/author-service/.env
+++ b/author-service/.env
@@ -1,3 +1,6 @@
+# MONGO_URI=mongodb://127.0.0.1:27017/author-service
 MONGO_URI=mongodb://mongodb-author:27017/author-service
 JWT_SECRET=monsercret
 JWT_EXPIRES=3d
+RABBITMQ_URI=amqp://rabbitmq:5672
+# RABBITMQ_URI=amqp://localhost:5672
