--- a/book-service/Dockerfile
+++ b/book-service/Dockerfile
@@ -3,8 +3,8 @@ RUN mkdir -p /usr/src/book-service
 WORKDIR /usr/src/book-service
 ADD . /usr/src/book-service
 COPY package*.json ./
-# COPY dist/ ./dist/
 COPY tsconfig*.json ./
 COPY nest-cli.json ./ 
 COPY .env ./ 
-CMD npm install && npm run start 
+CMD npm install && npm run start:dev
+# CMD npm install && npm run start 
